# renegade-contracts

./: .gitattributes  .gitignore  .gitmodules  .solhint.json  .solhintignore  Cargo.toml  LICENSE  README.md  Scarb.toml  cairo_project.toml  foundry.toml  pyproject.toml  remappings.txt  rust-toolchain  rust-toolchain.toml  test_ci_locally.sh
abi/: Cargo.toml  ICombined.json  ICombinedV1.json  ICombinedV2.json  IDarkpool.json  generate_abis.sh
abi/src/: lib.rs  v1.rs
abi/src/v2/: auth_helpers.rs  calldata_bundles.rs  mod.rs  permit2.rs
codegen/merkle-zeros/: Cargo.toml
codegen/merkle-zeros/src/: main.rs
codegen/poseidon-constants/: Cargo.toml
codegen/vkeys/: Cargo.toml
codegen/vkeys/src/: main.rs  vkeys.rs  vkeys_v1.rs  vkeys_v2.rs
contracts-common/: Cargo.toml
contracts-common/src/: backends.rs  constants.rs  conversion.rs  custom_serde.rs  lib.rs  serde_def_types.rs  solidity.rs  types.rs
contracts-common/src/types/: fees.rs  keys.rs  match.rs  mod.rs  proof_system.rs  statements.rs  transfers.rs  wallet.rs
contracts-core/: Cargo.toml
contracts-core/src/: constants.rs  custom_serde.rs  lib.rs  serde.rs  test_helpers.rs  utils.rs
contracts-core/src/crypto/: ecdsa.rs  hash.rs  merkle.rs  mod.rs  poseidon.rs
contracts-core/src/transcript/: errors.rs  mod.rs
contracts-core/src/types/: mod.rs
contracts-core/src/utils/: constants.rs  mod.rs  serde.rs
contracts-core/src/verifier/: errors.rs  mod.rs
contracts-stylus/: Cargo.toml
contracts-stylus/.cargo/: config
contracts-stylus/src/: constants.rs  darkpool.rs  darkpool_test_contract.rs  interfaces.rs  lib.rs  main.rs  precompile_test_contract.rs  test_contracts.rs  transcript.rs  utils.rs  verifier.rs
contracts-stylus/src/contracts/: darkpool.rs  darkpool_core.rs  gas_sponsor.rs  merkle.rs  mod.rs  poseidon.rs  transfer_executor.rs  verifier.rs  vkeys.rs
contracts-stylus/src/test_contracts/: darkpool_test_contract.rs  dummy_erc20.rs  mod.rs  precompile_test_contract.rs
contracts-stylus/src/types/: mod.rs  solidity_types.rs
contracts-stylus/src/utils/: backends.rs  constants.rs  helpers.rs  interfaces.rs  mod.rs  solidity.rs
contracts-stylus/src/verifier/: mod.rs
contracts-stylus/vkeys/prod/: process_malleable_match_settle_atomic  process_match_settle  process_match_settle_atomic  process_match_settle_atomic_with_commitments  process_match_settle_with_commitments  valid_commitments  valid_fee_redemption  valid_match_settle  valid_offline_fee_settlement  valid_reblind  valid_relayer_fee_settlement  valid_wallet_create  valid_wallet_update
contracts-stylus/vkeys/test/: process_malleable_match_settle_atomic  process_match_settle  process_match_settle_atomic  process_match_settle_atomic_with_commitments  process_match_settle_with_commitments  valid_commitments  valid_fee_redemption  valid_match_settle  valid_offline_fee_settlement  valid_reblind  valid_relayer_fee_settlement  valid_wallet_create  valid_wallet_update
contracts-utils/: Cargo.toml
contracts-utils/src/: constants.rs  conversion.rs  crypto.rs  lib.rs  merkle.rs
contracts-utils/src/proof_system/: dummy_renegade_circuits.rs  mod.rs  test_circuit.rs  test_data.rs
deploy-scripts/: Cargo.toml
deploy-scripts/artifacts/: TransparentUpgradeableProxy.abi
deploy-scripts/src/: cli.rs  commands.rs  constants.rs  errors.rs  lib.rs  main.rs  solidity.rs  utils.rs
integration/: Cargo.toml
integration/src/: abis.rs  cli.rs  constants.rs  inventory.rs  main.rs  test_inventory.rs  tests.rs  util.rs  utils.rs
integration/src/contracts/: darkpool.rs  mod.rs  type_conversion.rs
integration/src/tests/: admin.rs  atomic_match_settle.rs  atomic_settlement.rs  basic.rs  basic_darkpool_interaction.rs  create_wallet.rs  darkpool_components.rs  external_transfer.rs  fees.rs  gas_sponsorship.rs  malleable_atomic_settlement.rs  match_settle.rs  mod.rs  precompile.rs  update_wallet.rs
integration/src/util/: deployments.rs  merkle.rs  transactions.rs
integration/src/utils/: atomic_match.rs  contract.rs  conversion.rs  malleable_match.rs  mod.rs  sponsored_match.rs  transfer.rs
integration/v1/: Cargo.toml
integration/v1/src/: main.rs
integration/v2/: Cargo.toml
integration/v2/src/: main.rs  test_args.rs
scripts/: Cargo.toml  declare_oz_account.py  example.rs  fund_dev_account.py  test.rs  test_merkle.rs
scripts/.module/: Cargo.toml  build.rs
scripts/.module/src/: main.rs  merkle.rs  utils.rs
scripts/artifacts/: Permit2.abi
scripts/goerli/: deploy_darkpool.py  upgrade_darkpool.py  upgrade_merkle.py  upgrade_nullifier.py
scripts/local/: deploy_darkpool.py
scripts/nile/: deploy_darkpool.py  setup_integration_test.py
scripts/src/: cli.rs  commands.rs  constants.rs  errors.rs  lib.rs  main.rs  solidity.rs  types.rs  utils.rs
starknet_scripts/: Cargo.toml
starknet_scripts/src/: cli.rs  main.rs
starknet_scripts/src/commands/: deploy.rs  mod.rs  upgrade.rs  utils.rs
test-helpers/: Cargo.toml
test-helpers/src/: crypto.rs  dummy_renegade_circuits.rs  lib.rs  merkle.rs  misc.rs  proof_system.rs  renegade_circuits.rs
test/poseidon-reference-implementation/: Cargo.toml
test/poseidon-reference-implementation/src/: main.rs
test/rust-reference-impls/: Cargo.toml
test/rust-reference-impls/common/: Cargo.toml
test/rust-reference-impls/merkle/: Cargo.toml
test/rust-reference-impls/poseidon/: Cargo.toml
test/rust-reference-impls/transcript/: Cargo.toml
test/rust-reference-impls/verifier/: Cargo.toml
tests/: Cargo.toml  conftest.py  merkle.py  test_contract.py  test_darkpool.py  test_merkle.py  test_nullifier.py  test_upgades.py  util.py
tests/mocks/: Account.cairo  ERC20.cairo  ProxyImplementation.cairo
tests/src/: lib.rs  merkle.rs  utils.rs
tests/src/darkpool/: utils.rs
tests/src/merkle/: ark_merkle.rs  utils.rs
tests/src/nullifier_set/: utils.rs
tests/src/poseidon/: utils.rs
tests/src/profiling/: utils.rs
tests/tests/: darkpool.rs  merkle.rs  nullifier_set.rs  poseidon.rs  profiling.rs  statement_serde.rs  transcript.rs  verifier.rs  verifier_utils.rs
tools/deploy/: Cargo.toml  README.md
(+500 files in other folders)
