[workspace]
members = [
    "contracts-stylus",
    "contracts-core",
    "common",
    "test-helpers",
    "integration",
]

[workspace.dependencies]
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = { version = "0.4.0", features = ["bin-opt"] }
ark-poly = "0.4.0"
ark-std = "0.4.0"
ark-serialize = "0.4.0"
ark-crypto-primitives = { version = "0.4", default-features = false, features = [
    "crh",
    "merkle_tree",
] }
alloy-primitives = { version = "0.3.1", default-features = false }
alloy-sol-types = { version = "0.3.1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = { version = "3.4", default-features = false, features = [
    "macros",
    "alloc",
] }
postcard = { version = "1.0.0", default-features = false, features = ["alloc"] }
rand = "0.8.5"
num-bigint = { version = "0.4", default-features = false }
eyre = "0.6.8"
ethers = "2.0"
renegade-crypto = { git = "https://github.com/renegade-fi/renegade.git", default-features = false }

[profile.release]
codegen-units = 1        # prefer efficiency to compile time
panic = "abort"          # use simple panics
opt-level = "z"          # optimize for size ("s" may also work)
strip = true             # remove debug info
lto = true               # link time optimization
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds

[profile.binary-profiling]
inherits = "dev"
codegen-units = 1   # prefer efficiency to compile time
panic = "abort"     # use simple panics
opt-level = "z"     # optimize for size ("s" may also work)
lto = true          # link time optimization
rpath = false       # no run-time search path
incremental = false # no incremental builds

[patch.crates-io]
ark-ff = { git = "https://github.com/renegade-fi/algebra.git", branch = "bin-opt-feature" }
ark-serialize = { git = "https://github.com/renegade-fi/algebra.git", branch = "bin-opt-feature" }
