[workspace]
members = [
    "contracts-stylus",
    "contracts-core",
    "contracts-common",
    "scripts",
    "contracts-utils",
    "integration",
]

[workspace.dependencies]
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-std = "0.4.0"
ark-serialize = "0.4.0"
ark-crypto-primitives = { version = "0.4", default-features = false, features = [
    "crh",
    "merkle_tree",
] }
alloy-primitives = { version = "0.3.1", default-features = false }
alloy-sol-types = { version = "0.3.1", default-features = false }
serde = { version = "=1.0.197", default-features = false, features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.4", default-features = false, features = [
    "macros",
    "alloc",
] }
postcard = { version = "1.0.0", default-features = false, features = ["alloc"] }
rand = "0.8.5"
num-bigint = { version = "0.4", default-features = false }
ruint = "1.11"
eyre = "0.6.8"
ethers = "2.0"
clap = { version = "4.4.7", features = ["derive"] }
tokio = { version = "1.12.0", features = ["full"] }
constants = { git = "https://github.com/renegade-fi/renegade.git", default-features = false }
renegade-crypto = { git = "https://github.com/renegade-fi/renegade.git", default-features = false }
circuits = { git = "https://github.com/renegade-fi/renegade.git" }
circuit-types = { git = "https://github.com/renegade-fi/renegade.git", features = [
    "test-helpers",
] }
arbitrum-client = { git = "https://github.com/renegade-fi/renegade.git" }
itertools = "0.12"
mpc-plonk = { git = "https://github.com/renegade-fi/mpc-jellyfish.git" }
jf-primitives = { git = "https://github.com/renegade-fi/mpc-jellyfish.git", default-features = false }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"

[profile.release]
codegen-units = 1        # prefer efficiency to compile time
panic = "abort"          # use simple panics
strip = true             # remove debug info
lto = true               # link time optimization
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds

[profile.binary-profiling]
inherits = "dev"
codegen-units = 1   # prefer efficiency to compile time
panic = "abort"     # use simple panics
opt-level = 3       # optimize for performance (default for most contracts)
lto = true          # link time optimization
rpath = false       # no run-time search path
incremental = false # no incremental builds

[patch.crates-io]
# We patch `ahash` here since version mismatches w/ the relayer code have
# led to verification errors in the past.
ahash = { git = "https://github.com/tkaitchuck/aHash.git", tag = "v0.8.11" }

[patch."https://github.com/renegade-fi/renegade-contracts.git"]
# The `arbitrum-client` crate, which we depend on in e.g. `test-helpers`,
# depends on `contracts-common`, but from the git source.
# In order to have consistent types in the `arbitrum-client` interfaces,
# we patch the `contracts-common` dependency to point to the local crate.
contracts-common = { path = "./contracts-common" }
