[tool.poetry]
name = "contracts"
version = "0.1.0"
description = "StarkNet contracts for Renegade's anonymous, on-chain settlement layer."
authors = ["Joey Kraut <joey@renegade.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
amarna = "^0.1.5"
cairo-lang = "^0.10.3"
cairo-nile = "^0.12.0"
openzeppelin-cairo-contracts = "^0.5.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [ "asyncio" ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
