[package]
name = "contracts-common"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
ark-serialize = { workspace = true }

[dev-dependencies]
ark-std = { workspace = true }
num-bigint = { workspace = true }
rand = { workspace = true }
