[package]
name = "contracts-common"
version = "0.1.0"
edition = "2021"

[features]
core-settlement = []
test-helpers = []

[dependencies]

# === Arithmetic === #
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
num-bigint = { workspace = true }

# === EVM === #
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }

# === Serialization === #
serde = { workspace = true }
serde_with = { workspace = true }
ark-serialize = { workspace = true }

# === Renegade === #
circuit-types = { workspace = true }
circuits = { workspace = true }
constants = { workspace = true }
common = { path = "../../renegade/common", default-features = false, features = [
  "wallet",
  "internal-types",
] }
mpc-plonk = { workspace = true, features = ["test_apis"] }
mpc-relation = { git = "https://github.com/renegade-fi/mpc-jellyfish.git", default-features = false }

[dev-dependencies]
ark-std = { workspace = true }
rand = { workspace = true }
