[package]
name = "contracts-core"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
alloy-primitives = { workspace = true }
renegade-crypto = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }


[dev-dependencies]
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
jf-utils = { git = "https://github.com/renegade-fi/mpc-jellyfish.git" }
test-helpers = { path = "../test-helpers" }
rand = { workspace = true }
ethers = { workspace = true }
ark-crypto-primitives = { workspace = true }
