[package]
name = "contracts-core"
version = "0.1.0"
edition = "2021"

[dependencies]
contracts-common = { path = "../contracts-common" }
ark-ff = { workspace = true }
alloy-primitives = { workspace = true }
renegade-crypto = { workspace = true, features = ["inline"] }
serde = { workspace = true }
serde_with = { workspace = true }


[dev-dependencies]
ark-poly = "0.4"
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
jf-utils = { git = "https://github.com/renegade-fi/mpc-jellyfish.git" }
jf-primitives = { workspace = true }
test-helpers = { path = "../test-helpers" }
rand = { workspace = true }
ethers = { workspace = true }
ark-crypto-primitives = { workspace = true }
circuit-types = { workspace = true, features = ["test-helpers"] }
