[package]
name = "contracts-stylus"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = { version = "0.4.2" }
mini-alloc = "0.4.2"
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
contracts-common = { path = "../contracts-common" }
contracts-core = { path = "../contracts-core" }
postcard = { workspace = true }
alloy-sol-types = { workspace = true }

[features]
darkpool = []
darkpool-test-contract = []
no-verify = []
merkle = []
merkle-test-contract = []
verifier = []
vkeys = []
test-vkeys = []
precompile-test-contract = []
dummy-erc20 = []
dummy-upgrade-target = []
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]
