[package]
name = "contracts-stylus"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = { git = "https://github.com/joeykraut/stylus-sdk-rs" }
mini-alloc = "0.4.2"
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
contracts-common = { path = "../contracts-common" }
contracts-core = { path = "../contracts-core" }
postcard = { workspace = true }
alloy-sol-types = { workspace = true }
serde = { workspace = true }

[features]
darkpool = []
darkpool-test-contract = []
darkpool-core = []
merkle = []
merkle-test-contract = []
verifier = []
vkeys = []
test-vkeys = []
transfer-executor = []
precompile-test-contract = []
dummy-erc20 = []
dummy-upgrade-target = []
no-verify = []

export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]
