[package]
name = "contracts-stylus"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = { workspace = true }
mini-alloc = "0.4.2"
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
contracts-common = { path = "../contracts-common" }
contracts-core = { path = "../contracts-core" }
postcard = { workspace = true }
alloy-sol-types = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }

[features]
core-wallet-ops = ["darkpool-core"]
core-match-settle = ["darkpool-core", "contracts-common/core-settlement"]
core-atomic-match-settle = ["darkpool-core", "contracts-common/core-settlement"]
core-malleable-match-settle = [
    "darkpool-core",
    "contracts-common/core-settlement",
]
darkpool = []
darkpool-test-contract = []
darkpool-core = []
merkle = []
merkle-test-contract = []
verifier-core = ["verifier"]
verifier-settlement = ["verifier"]
verifier = []
vkeys = []
test-helpers = []
test-vkeys = []
transfer-executor = []
gas-sponsor = ["contracts-common/gas-sponsor"]
precompile-test-contract = []
dummy-erc20 = []
dummy-weth = ["dummy-erc20"]
dummy-upgrade-target = []
no-verify = []

export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]
