[package]
name = "deploy-scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
itertools = { workspace = true }
