[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# === Cryptography Dependencies === #
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = "0.4"
jf-primitives = { git = "https://github.com/renegade-fi/mpc-jellyfish.git" }

# === Renegade Dependencies === #
renegade-circuits = { package = "circuits", git = "https://github.com/renegade-fi/renegade", features = [
    "test_helpers",
] }
renegade-circuit-types = { package = "circuit-types", git = "https://github.com/renegade-fi/renegade" }
renegade-common = { package = "common", git = "https://github.com/renegade-fi/renegade", default-features = false, features = [
    "all-types",
] }
renegade-constants = { package = "constants", git = "https://github.com/renegade-fi/renegade" }
renegade-util = { package = "util", git = "https://github.com/renegade-fi/renegade", features = [
    "blockchain",
] }
test-helpers = { git = "https://github.com/renegade-fi/renegade", features = [
    "contracts",
] }

# === Alloy Dependencies === #
alloy = { version = "0.12", features = ["essentials"] }
alloy-contract = "0.12.3"
alloy-sol-types = "0.8.23"
alloy-sol-macro = "0.8.23"
ethers-signers = "2.0"

# === Test Harness Dependencies === #
clap = { version = "4.0", features = ["derive"] }
colored = "3"
eyre = "0.6"
inventory = "0.3"
tokio = { version = "1.36", features = ["full"] }

# === Misc Dependencies === #
itertools = "0.11"
num-bigint = "0.4"
rand = "0.8"
serde_json = "1.0"
