[package]
name = "integration"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true, default-features = true, features = ["rand"] }
alloy-contract = { workspace = true }
alloy-primitives = { workspace = true, features = ["tiny-keccak"] }
alloy-sol-types = { workspace = true }
contracts-common = { path = "../contracts-common", features = ["test-helpers"] }
contracts-core = { path = "../contracts-core" }
contracts-stylus = { path = "../contracts-stylus", features = ["test-helpers"] }
contracts-utils = { path = "../contracts-utils" }
scripts = { path = "../scripts" }
tokio = { workspace = true }
eyre = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
ark-ec = { workspace = true }
rand = { workspace = true }
clap = { workspace = true, features = ["env"] }
postcard = { workspace = true }
serde = { workspace = true }
ark-crypto-primitives = { workspace = true }
circuit-types = { workspace = true, features = ["test-helpers"] }
circuits = { workspace = true, features = ["test_helpers"] }
constants = { workspace = true }
jf-primitives = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
inventory = "0.3"
num-bigint = "0.4"
ruint = { workspace = true }

test-helpers = { git = "https://github.com/renegade-fi/renegade.git" }
renegade-crypto = { git = "https://github.com/renegade-fi/renegade.git", default-features = false }
colored = "2"
