[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
itertools = { workspace = true }
circuits = { workspace = true }
circuit-types = { workspace = true }
mpc-plonk = { workspace = true }
ark-bn254 = { workspace = true }
jf-primitives = { workspace = true }
common = { path = "../common" }
postcard = { workspace = true }
json = "0.12"
