[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
itertools = { workspace = true }
circuits = { workspace = true }
circuit-types = { workspace = true }
constants = { workspace = true }
util = { git = "https://github.com/renegade-fi/renegade.git", branch = "joey/fees-circuits" }
mpc-plonk = { workspace = true }
jf-primitives = { workspace = true }
contracts-common = { path = "../contracts-common" }
contracts-utils = { path = "../contracts-utils" }
rand = { workspace = true }
postcard = { workspace = true }
json = "0.12"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = "0.4.3"
ark-ed-on-bn254 = "0.4"
