[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true, default-features = true, features = ["rlp"] }
alloy-contract = { workspace = true }
# In the scripts, we use higher versions of the alloy-sol crates in line with `alloy-contract`
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true, features = ["getrandom"] }
clap = { workspace = true, features = ["env"] }
tokio = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }
circuits = { workspace = true, features = ["test_helpers"] }
circuit-types = { workspace = true }
constants = { workspace = true }
util = { git = "https://github.com/renegade-fi/renegade.git", branch = "joey/alloy-v0.11.0", features = [
    "errors",
] }
mpc-plonk = { workspace = true }
jf-primitives = { workspace = true }
contracts-common = { path = "../contracts-common" }
contracts-utils = { path = "../contracts-utils" }
rand = { workspace = true }
postcard = { workspace = true }
json = "0.12"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = "0.4.3"
ark-ed-on-bn254 = "0.4"
