[package]
name = "starknet_scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet = { workspace = true }
clap = { version = "4.3.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6.8"
json = "0.12"
serde_json = "1.0.96"
url = "2.3.1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "std"] }
