[package]
name = "test-helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
jf-plonk = { git = "https://github.com/renegade-fi/mpc-jellyfish.git", features = [
    "test-srs",
    "test_apis",
] }
jf-relation = { git = "https://github.com/renegade-fi/mpc-jellyfish.git", default-features = false }
jf-utils = { git = "https://github.com/renegade-fi/mpc-jellyfish.git" }
jf-primitives = { git = "https://github.com/renegade-fi/mpc-jellyfish.git", default-features = false }
