[package]
name = "test-helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
rand = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
ark-crypto-primitives = { workspace = true }
alloy-primitives = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
ethers = { workspace = true }
jf-plonk = { git = "https://github.com/renegade-fi/mpc-jellyfish.git", features = [
    "test-srs",
    "test_apis",
] }
jf-relation = { git = "https://github.com/renegade-fi/mpc-jellyfish.git", default-features = false }
jf-utils = { git = "https://github.com/renegade-fi/mpc-jellyfish.git" }
jf-primitives = { git = "https://github.com/renegade-fi/mpc-jellyfish.git", default-features = false }
renegade-crypto = { workspace = true }
