[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
starknet_scripts = { path = "../starknet_scripts" }
# TODO: Use starknet-client when it's ready

once_cell = "1.17.1"
ctor = "0.2.4"

eyre = "0.6.8"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "std"] }
strum = "0.25"

reqwest = { version = "0.11.18", features = ["json"] }
tokio = "1"

ark-crypto-primitives = { version = "0.4", features = ["crh", "merkle_tree", "sponge"] }
ark-std = "0.4"
starknet = { workspace = true }
katana-core = { git = "https://github.com/dojoengine/dojo.git" }
dojo-test-utils = { git = "https://github.com/dojoengine/dojo.git" }
