[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
starknet_scripts = { path = "../starknet_scripts" }
# TODO: Use starknet-client when it's ready

once_cell = "1.17.1"

eyre = "0.6.8"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "std"] }

tokio = "1"

ark-crypto-primitives = { version = "0.4", features = ["crh", "merkle_tree", "sponge"] }
ark-std = "0.4"
ark-ff = "0.4"
rand = "0.8"
num-bigint = { version = "0.4.3", features = ["rand"] }

starknet = { workspace = true }
katana-core = { git = "https://github.com/dojoengine/dojo.git", rev = "e305d4d" }
dojo-test-utils = { git = "https://github.com/dojoengine/dojo.git", rev = "e305d4d" }
mpc-stark = { git = "https://github.com/renegade-fi/mpc-stark.git" }
mpc-bulletproof = { git = "https://github.com/renegade-fi/mpc-bulletproof.git", branch = "stark-curve-refactor", features = ["integration_test"] }
