[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
starknet_scripts = { path = "../starknet_scripts" }
# TODO: Use starknet-client when it's ready

once_cell = "1.17.1"

eyre = "0.6.8"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "std"] }

tokio = "1"
serde_json = "1.0.96"

ark-crypto-primitives = { version = "0.4", features = ["crh", "merkle_tree", "sponge"] }
ark-std = "0.4"
ark-ff = "0.4"
rand = "0.8"
num-bigint = { version = "0.4.3", features = ["rand"] }
byteorder = "1.4.3"

starknet = { workspace = true }
katana-core = { git = "https://github.com/dojoengine/dojo.git", rev = "954dbb3" }
dojo-test-utils = { git = "https://github.com/dojoengine/dojo.git", rev = "954dbb3" }
mpc-stark = { workspace = true }
mpc-bulletproof = { git = "https://github.com/renegade-fi/mpc-bulletproof.git", features = ["integration_test"] }
merlin = { git = "https://github.com/renegade-fi/merlin.git" }
renegade-crypto = { git = "https://github.com/renegade-fi/renegade.git" }
circuits = { git = "https://github.com/renegade-fi/renegade.git", features = ["test_helpers"] }
circuit-types = { git = "https://github.com/renegade-fi/renegade.git" }
starknet-client = { git = "https://github.com/renegade-fi/renegade.git" }
