[package]
name = "merkle-zeros-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
renegade-crypto = { git = "https://github.com/renegade-fi/renegade.git" }
renegade-constants = { package = "constants", git = "https://github.com/renegade-fi/renegade.git", default-features = false }
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"
