[package]
name = "poseidon-constants-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
renegade-crypto = { git = "https://github.com/renegade-fi/renegade.git", branch = "joey/next-audit" }
renegade-constants = { package = "constants", git = "https://github.com/renegade-fi/renegade.git", branch = "joey/next-audit", default-features = false }

anyhow = "1.0"
clap = { version = "4.5.1", features = ["derive"] }
itertools = "0.14"
num-bigint = "0.4"
