[package]
name = "vkeys-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
# === Renegade === #
reference-impl-common = { package = "common", path = "../../test/rust-reference-impls/common" }
renegade-circuits = { package = "circuits", git = "https://github.com/renegade-fi/renegade.git" }
renegade-circuit-types = { package = "circuit-types", git = "https://github.com/renegade-fi/renegade.git" }
renegade-constants = { package = "constants", git = "https://github.com/renegade-fi/renegade.git" }

# === EVM === #
alloy = "0.11"
alloy-sol-types = "0.8.21"

# === Misc === #
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
ethers = { version = "2.0", features = ["abigen"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
